--- a/LUMSLife/frontend/src/CSS/signup.css
+++ b/LUMSLife/frontend/src/CSS/signup.css
@@ -8,7 +8,9 @@
   justify-content: center;
   flex-direction: column;
   width: 35%;
+  min-height: 100vh;
   margin: 0 auto;
+  align-items: center;
 }
 .form-group {
   margin: 10px 0;
