--- a/LUMSLife/frontend/src/CSS/StudentProfile.css
+++ b/LUMSLife/frontend/src/CSS/StudentProfile.css
@@ -26,6 +26,9 @@ body {
   padding: 20px;
   background-color: #f0f0f0;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .side-menu nav ul {
